--- a/src/components/Cards/Basic/Basic.astro
+++ b/src/components/Cards/Basic/Basic.astro
@@ -7,10 +7,10 @@ const {cards} = Astro.props;
 // console.log(cards);
 ---
 
-<div class={s["basic_card"]}>
+<div class={s["basic_card"]} data-animate="fade-slide" data-animate-children="true" data-animate-children-only="true">
     {
         cards.map((card: BasicCard) => (
-            <article data-animate="fade-slide" data-animate-children="true" data-animate-children-only="true">
+            <article>
                 {card.image && (
                     <div class={s["basic_card__image-wrapper"]}>
                         <CustomImage eager={false} image={card.image} size="medium" classlist={s["basic_card__image_component"]} />
@@ -18,7 +18,8 @@ const {cards} = Astro.props;
                 )}
                 <div class={s["basic_card__content"]} data-animate="fade-slide" data-animate-children="true" data-animate-children-only="true">
                     <h3>{card.title}</h3>
-                    <slot set:html={extractLexicalText(card.body)} />
+                    {/* <slot set:html={extractLexicalText(card.body)} /> */}
+                    <slot set:html={card.body_html} />
                 </div>
             </article>
         ))
