--- a/src/components/PageNavigation/SimpleNav/SimpleNav.astro
+++ b/src/components/PageNavigation/SimpleNav/SimpleNav.astro
@@ -54,7 +54,7 @@ const pageLinks = menuItems.map((link: Link) =>
                 />
                 }
                 
-                <span class={s["simple-nav__logo-text"]}>{title}</span>
+                <!-- <span class={s["simple-nav__logo-text"]}>{title}</span> -->
             </a>
 
             <ul
