--- a/src/components/Cards/Alternating/Alternating.astro
+++ b/src/components/Cards/Alternating/Alternating.astro
@@ -23,7 +23,8 @@ const { cards } = Astro.props;
                 </div>
                 <article>
                     <h3>{card.title}</h3>
-                    <slot set:html={extractLexicalText(card.body)} />
+                    {/* <slot set:html={extractLexicalText(card.body)} /> */}
+                    <slot set:html={card.body_html} />
                 </article>
             </div>
         ))
