--- a/src/components/Cards/AlternatingBasic/AlternatingBasic.astro
+++ b/src/components/Cards/AlternatingBasic/AlternatingBasic.astro
@@ -18,7 +18,8 @@ const {cards} = Astro.props;
                 )}
                 <div class={s["card__content"]} data-animate="fade-slide" data-animate-children="true" data-animate-children-only="true">
                     <h3>{card.title}</h3>
-                    <slot set:html={extractLexicalText(card.body)} />
+                    {/* <slot set:html={extractLexicalText(card.body)} /> */}
+                    <slot set:html={card.body_html} />
                 </div>
             </article>
         ))
