--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -1,3 +1,7 @@
-<div class="content-grid">
+---
+const props = Astro.props
+---
+
+<div class:list={["content-grid", props.classname]}>
     <slot />
 </div>
