--- a/src/components/PageNavigation/PageNavigation.astro
+++ b/src/components/PageNavigation/PageNavigation.astro
@@ -1,9 +1,9 @@
 ---
 import { fetchPage } from "@utils/payload";
-import type { HeroBlock } from "@utils/payload/types";
+import type { HeroBlock,  } from "@utils/payload/types";
 
 const {navigation, blocks, country, title} = await fetchPage(["navigation", "blocks", "country", "title"])
-const hero: HeroBlock = blocks.find(block => block.blockType === 'simple-hero') || {} as HeroBlock
+const hero = blocks.find(block => block.blockType === 'simple-hero' || block.blockType === 'slideshow-hero') || {} as any
 // import BasicFLoatingNav from "@components/PageNavigation/Navigation/FixedNav/FixedNav.astro";
 // import CenterNav from "./CenterNav/CenterNav.astro";
 import FloatingPill from "@components/PageNavigation/FloatingPill/FloatingPill.astro";
@@ -11,10 +11,10 @@ import ExpandingPillNav from "./ExpandingPillNav/ExpandingPillNav.astro";
 import SimpleNav from "./SimpleNav/SimpleNav.astro";
 const props = Astro.props;
 
-const fixedMenu = ["horizontal with image", "black modern", "gradient", "default horizontal", "big name"].includes(hero.type as string) ? true : false;
-const showSimpleNav = ["vertical","alternate vertical", "default vertical", "two column", "stylised horizontal", "horizontal"].includes(hero.type as string)
+const fixedMenu = ["default","horizontal with image", "black modern", "gradient", "default horizontal", "big name"].includes(hero.type as string) ? true : false;
+const showSimpleNav = ["default","vertical","alternate vertical", "default vertical", "two column", "stylised horizontal", "horizontal"].includes(hero.type as string)
 const showPillNav = ["big name"].includes(hero.type as string)
-const expandingNav = ["split","default"].includes(hero.type as string)
+const expandingNav = ["split"].includes(hero.type as string)
 
 const navProps = {
     title,
