--- a/src/components/Sections/RoundedAbout/RoundedAbout.astro
+++ b/src/components/Sections/RoundedAbout/RoundedAbout.astro
@@ -1,6 +1,6 @@
 ---
-import type { SymbioticAboutBlock } from "@utils/payload/types";
-interface Props extends SymbioticAboutBlock {}
+import type { RoundedAbout } from "@utils/payload/types";
+interface Props extends RoundedAbout {}
 import Container from "@components/Container.astro";
 import s from "./style.module.css";
 import CustomImage from "@components/CustomImage.astro";
@@ -25,8 +25,7 @@ const props = Astro.props;
                 </h2>
             </header>
             <div class={s["about__content"]}>
-
-                <article class={s["about__content-article"]}>
+                <article class={s["about__content-article"]} data-animate="fade-slide" data-animate-children="true" data-animate-children-only="true">
                     <slot set:html={extractLexicalText(props.body)} />
                 </article>
             </div>
