--- a/src/components/Sections/RoundedAbout/style.module.css
+++ b/src/components/Sections/RoundedAbout/style.module.css
@@ -12,33 +12,42 @@
 }
 
 .about__content {
-        z-index: 2;
+    z-index: 2;
 
-        color: var(--clr-section-highlight-text);
-        background-color: var(--clr-section-highlight);
+    color: var(--clr-section-highlight-text);
+    background-color: var(--clr-section-highlight);
 
-        border: var(--size-3) solid var(--clr-neutral-50);
-        border-top-right-radius: var(--size-10);
-        border-bottom-left-radius: var(--size-10);
+    border: var(--size-3) solid var(--clr-neutral-50);
+    border-top-right-radius: var(--size-10);
+    border-bottom-left-radius: var(--size-10);
 
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: var(--size-8) var(--size-4);
-        gap: var(--size-3);
-        margin-bottom: -1.25rem;
-    }
+    padding: var(--size-8) var(--size-4);
 
-    .about__image {
+    margin-bottom: -1.25rem;
+}
 
-        width: 100%;
-        height: 100%;
+.about__content-article {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: var(--size-2);
+}
 
-        border-top-left-radius: var(--size-10);
-        border-bottom-right-radius: var(--size-10);
+.about__image {
 
-        min-height: 250px;
-    }
+    width: 100%;
+    height: 100%;
+
+    border-top-left-radius: var(--size-10);
+    border-bottom-right-radius: var(--size-10);
+
+    min-height: 250px;
+}
+
+.about__content h3 {
+    font-size: var(--heading-large);
+    margin-bottom: var(--size-1);
+}
 
 @media (min-width: 1024px) {
     .about__wrapper {
@@ -72,12 +81,13 @@
         border-top-right-radius: var(--size-11);
         border-bottom-left-radius: var(--size-11);
 
+        padding: var(--size-11) var(--size-10);
+        margin-bottom: 0;
+/*         
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding: var(--size-11) var(--size-10);
-        gap: var(--size-3);
-        margin-bottom: 0;
+        gap: var(--size-4); */
     }
 
     .about__image {
