--- a/src/components/PageNavigation/PageNavigation.astro
+++ b/src/components/PageNavigation/PageNavigation.astro
@@ -12,8 +12,8 @@ import SimpleNav from "./SimpleNav/SimpleNav.astro";
 const props = Astro.props;
 
 const fixedMenu = ["default","horizontal with image", "black modern", "gradient", "default horizontal", "big name"].includes(hero.type as string) ? true : false;
-const showSimpleNav = ["default","vertical","alternate vertical", "default vertical", "two column", "stylised horizontal", "horizontal"].includes(hero.type as string)
-const showPillNav = ["big name"].includes(hero.type as string)
+const showSimpleNav = ["vertical","alternate vertical", "default vertical", "two column", "stylised horizontal", "horizontal"].includes(hero.type as string)
+const showPillNav = ["default","big name"].includes(hero.type as string)
 const expandingNav = ["split"].includes(hero.type as string)
 
 const navProps = {
