feat: Update section highlight text color calculation and adjust card component structure for improved rendering

--- a/src/components/Sections/RoundedAbout/style.module.css
+++ b/src/components/Sections/RoundedAbout/style.module.css
@@ -28,7 +28,7 @@
     margin-bottom: -1.25rem;
 }
 
-.about__content-article {
+.about__content-article > div{
     display: flex;
     flex-direction: column;
     justify-content: center;
