--- a/src/components/Cards/AlternatingBasic/AlternatingBasic.astro
+++ b/src/components/Cards/AlternatingBasic/AlternatingBasic.astro
@@ -10,13 +10,13 @@ const {cards} = Astro.props;
 <div class={s["card"]} data-animate="fade-slide" data-animate-children="true" data-animate-children-only="true">
     {
         cards.map((card: BasicCard) => (
-            <article class={s["card__item"]} data-animate="fade-slide" data-animate-children="true" data-animate-children-only="true">
+            <article class={s["card__item"]}>
                 {card.image && (
                         <CustomImage eager={false} image={card.image} size="medium" classlist={s["card__image"]} />
                     // <div class={s["card__image-wrapper"]}>
                     // </div>
                 )}
-                <div class={s["card__content"]} data-animate="fade-slide" data-animate-children="true" data-animate-children-only="true">
+                <div class={s["card__content"]}>
                     <h3>{card.title}</h3>
                     {/* <slot set:html={extractLexicalText(card.body)} /> */}
                     <slot set:html={card.body_html} />
