--- a/src/components/Sections/RoundedAbout/RoundedAbout.astro
+++ b/src/components/Sections/RoundedAbout/RoundedAbout.astro
@@ -4,7 +4,6 @@ interface Props extends RoundedAbout {}
 import Container from "@components/Container.astro";
 import s from "./style.module.css";
 import CustomImage from "@components/CustomImage.astro";
-import { extractLexicalText } from "@utils/payload/helpers";
 const props = Astro.props;
 ---
 
@@ -26,7 +25,7 @@ const props = Astro.props;
             </header>
             <div class={s["about__content"]}>
                 <article class={s["about__content-article"]} data-animate="fade-slide" data-animate-children="true" data-animate-children-only="true">
-                    <slot set:html={extractLexicalText(props.body)} />
+                    <slot set:html={props.body_html} />
                 </article>
             </div>
             <CustomImage
