--- a/src/assets/css/tokens.css
+++ b/src/assets/css/tokens.css
@@ -178,7 +178,8 @@
 
     --clr-section-highlight: var(--clr-primary);
     --clr-section-highlight-heading: oklch(from var(--clr-section-highlight) calc(l + 0.5) c h);
-    --clr-section-highlight-text: oklch(from var(--clr-section-highlight) calc(l - 0.98) c h);
+    /* --clr-section-highlight-text: oklch(from var(--clr-section-highlight) calc(l + 0.98) c h); */
+    --clr-section-highlight-text: var(--clr-neutral-50);
 
     /* Base timing values */
     --duration-slow: 500ms;
