--- a/src/components/Hero/SplitHero/style.module.css
+++ b/src/components/Hero/SplitHero/style.module.css
@@ -1,12 +1,13 @@
 .split-hero__wrapper {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, 50%);
+    grid-template-rows: repeat(2, 1fr);
     gap: var(--size-4);
     align-items: center;
 
     padding-block: var(--size-4);
-    height: 100dvh;
+    min-height: 100dvh;
+    height: 100%;
 }
 
 .split-hero__image {
